working with new data and multiple bus replacements